# manage-hw-directory

./: .gitignore  Cargo.toml  README.md  config.toml  example_settings.json5  settings.json5
src/: config.rs  files.rs  interface.rs  main.rs  settings.rs  subject.rs
src/config/: config_values.rs  lyx_file_config.rs  open_config.rs  questions_file_config.rs
src/interface/: cmd_interface.rs  tui_interface.rs
src/settings/: interface_settings.rs  lyx_file_settings.rs  open_settings.rs  questions_file_settings.rs  subject_ordering.rs
src/subject/: files.rs
