[package]
name = "manage_hw_directory"
version = "0.1.0"
edition = "2021"
rust-version = "1.79.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
config = "0.14.0"
cursive = "0.21.1"
formatx = "0.2.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.125"
